kubernetes/e1/k8s/phase1/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
  namespace: three-tier-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
        - name: api-server
          image: three-tier-api:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
