kubernetes/e1/k8s/phase1/db-deployment.yaml
# The type of yaml file (what resource to create)
kind: Deployment
# Which API endpoint version to use
apiVersion: apps/v1
metadata:
  name: postgres-db
  namespace: three-tier-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
