kubernetes/e1/k8s/phase1/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: three-tier-app
spec:
  type: ClusterIP
  selector:
    app: api-server
  ports:
    - port: 5000
      targetPort: 5000
