kubernetes/e1/k8s/phase1/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: three-tier-app
spec:
  type: ClusterIP
  selector:
    app: postgres-db
  ports:
    - port: 5432
      targetPort: 5432
